--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,143 +2,153 @@
   /* background-color: #161E2E; */
 }
 
-.navbar-dark .navbar-toggler{
-    border-color: #161E2E !important;
+.carousel-caption{
+ 
+  /* background-color: rgba(0, 0, 0, 0.452); */
 }
 
-.navbar{
-    color: white;
-    background-color: #161E2E !important;
+.w-100{
+  height: 90vh !important;
+  object-fit: cover !important;
 }
 
-.Search{
-  display: flex;
-  justify-content: start;
-}
-
-.form-control{
-  padding-right: 600px !important;
-  border-radius: 30px;
-
-  /* margin-left: 100px !important; */
-}
-
-.h3{
-  background-color: none;
-}
 
 .card{
+  /* background-color: #161E2E; */
+  /* background-color: antiquewhite; */
+  margin-top: 20px;
+  margin-bottom: 90px;
+}
+
+
+.info{
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+  text-align: justify;
+}
+
+.card-img, .card-img-top{
+  width:100%;
+  height:auto;
+  position: absolute;
+  border-radius: 30px;
+}
+
+.film{
+  width:100%;
+  height: auto;
+  background-color: #161E2E;
+  border-radius:  30px;
+  margin-right: 80px ;
+  padding-right: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  top: 40px;
+  bottom: 40px;
+}
+
+.btn{
+  /* color: #161E2E !important; */
+  /* background-color: #161E2E; */
+  border-radius: 50px;
+  position: absolute;
+}
+
+.button-read-more{
+  margin-left: 0px;
+  margin-right: 20px;
+  /* width: 40vh; */
+  color: white;
   background-color: #161E2E;
 }
 
-.carousel-item{
+/* card pt2 */
+/* * {
+  box-sizing: border-box; 
+} */
+
+/* body, html {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
+/* new */
+/* .wrapper {
+  display: flex;
+  width: 90%;
 }
 
-.carousel-caption{
-  /* text-align: justify !important;
-  padding-left: 20px;
-  padding-right: 20px;
-  width: 40%;
-  height: 80%;
-  padding-top: 140px;
-  padding-bottom: 5px;
-  top: 20; */
-  /* padding-left: 100px;
-  padding-right: 100px;  */
-  /* transform: translateX(-40%); */
-  /* transform: translateY(-6%); */
-  background-color: rgba(0, 0, 0, 0.452);
-  /* background-color: none; */
+.card {
+  border-radius: 15px;
+  padding: 1.5rem;
+  margin-bottom: 20px;
+  background: white;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  transition: 0.4s ease-out;
 }
-
-/* kayaknya ga pengaruh */
-.carousel-item img{
-  /* margin-top: 100px !important; */
-  width: 100% !important;
-  height: 100% !important;
-}
-/* ya */
-
-.w-100{
-  margin-top: 100px;
-  width: 100% !important;
-  height: 100% !important;
-}
-
-.footer {
-    /* margin-top: 80px; */
-    padding: 64px 39px 32px;
-    background-color: #161E2E;
-    /* background-color: beige; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .card:hover {
+    transform: translateY(20px); 
   }
-  
-  .footer #logo {
-    height: 33px;
-    /* color: white; */
-  }
-  
-  .footer .links {
-    padding: 40px 0px 88px;
-    display: flex;
-    justify-content: space-evenly;
+    .card:hover:before {
+      opacity: 1; 
+    }
+    .card:hover .info {
+      opacity: 1;
+      transform: translateY(0px); 
+    }
+  .card:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
     width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 2;
+    transition: 0.5s;
+    opacity: 0; 
   }
-  
-  .footer .links a {
-    text-decoration: none;
-    font-family: "Lato", sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 25px;
-    letter-spacing: -0.128571px;
-    /* color: white; */
-    transition-duration: 0.4s;
-  }
-  
-  .footer .socials {
-    padding-bottom: 72px;
-    width: 60%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-  
-  .footer .socials a {
-    text-decoration: none;
-    transition-duration: 0.4s;
-  }
-  
-  .footer .links a:hover {
-    color: var(--white);
-  }
-  
-  .footer .socials a:hover {
-    filter: brightness(600%);
-  }
-  
-  .transform-img{
-    display: none;
-  }
+  .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 15px; }
+  .card .info {
+    position: relative;
+    z-index: 3;
+    color: white;
+    opacity: 0;
+    transform: translateY(30px);
+    transition: 0.5s; }
+    .card .info h1 {
+      margin: 0px; }
+    .card .info p {
+      letter-spacing: 1px;
+      font-size: 15px;
+      margin-top: 8px; }
+    .card .info button {
+      padding: 0.6rem;
+      outline: none;
+      border: none;
+      border-radius: 3px;
+      background: white;
+      color: black;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.4s ease; }
+      .card .info button:hover {
+        background: dodgerblue;
+        color: white; } */
 
+ /* barulagi */
 
-  @media (max-width:991px )  and ( min-width:300px) {
-    .form-control{
-      padding: 0.375rem 0.75rem !important;
-      
-    }
-    .form-control[type=text]:focus{
-      outline-color: none !important;
-    }
-
-
-
-  }
-
-  
-  
-  
-  
