--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,11 +1,4 @@
-*{
-  /* background-color: #161E2E; */
-}
 
-.carousel-caption{
- 
-  /* background-color: rgba(0, 0, 0, 0.452); */
-}
 
 .w-100{
   height: 90vh !important;
@@ -14,10 +7,17 @@
 
 
 .card{
-  /* background-color: #161E2E; */
-  /* background-color: antiquewhite; */
-  margin-top: 20px;
-  margin-bottom: 90px;
+  background-color: #161E2E;
+  /* padding-top: 20px;
+  padding-bottom: 20px; */
+}
+
+.container-video{
+  background-color: #161E2E;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 
@@ -51,7 +51,7 @@
   /* color: #161E2E !important; */
   /* background-color: #161E2E; */
   border-radius: 50px;
-  position: absolute;
+  /* position: absolute; */
 }
 
 .button-read-more{
