--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,10 +1,21 @@
-
+*{
+  /* background-color: #161E2E; */
+}
 
 .w-100{
   height: 90vh !important;
   object-fit: cover !important;
 }
 
+.title-trending{
+  color: white;
+  background-color: #161E2E;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 
 .card{
   background-color: #161E2E;
