--- a/src/container/Listfilm.css
+++ b/src/container/Listfilm.css
@@ -10,7 +10,6 @@
   }
 } */
 
-
 .movie-wrapper {
   display: inline-block;
   box-sizing: border-box;
@@ -35,7 +34,7 @@
 p.vote-movie {
   position: absolute;
   color: rgb(0, 0, 0);
-  bottom: 5px;
+  bottom: 100px;
   right: 6px;
   margin: 0;
   background: rgb(255, 255, 255);
@@ -43,6 +42,14 @@ p.vote-movie {
   border-radius: 4px;
   font-size: 12px;
   font-weight: 500;
+}
+
+.vote-movie img{
+  width: 13px;
+  margin-block-start: 1px;
+  margin-block-end: 3px;
+  margin-right: 2px;
+  margin-bottom: 2px;
 }
 
 p.title-movie {
@@ -57,4 +64,132 @@ p.date-movie {
   font-size: 14px;
   color: #999;
   margin: 0px;
+}
+
+/* detail */
+
+.modal-header{
+  border-bottom: 1px solid #161E2E;
+}
+
+.modal-content{
+  /* width:800px !important;
+  margin-left: 0px; */
+  background-color:  #161E2E;
+}
+
+.details-button{
+  border-radius: 10px !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-top: 10px !important;
+  /* width: 120px; */
+  
+}
+
+.heading__primary{
+  font-size: 20px!important;
+}
+
+.movie {
+  border-radius: 5px;
+  display: flex;
+  overflow: hidden;
+  /* margin-top: 100px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color:  #161E2E;
+}
+
+.movie__hero {
+  flex: 0 0 45%;
+}
+
+.movie__img {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  width: 100%;
+  display: block;
+  border-radius: 20px;
+}
+
+.movie__content {
+  /* background-color: #fff; */
+  text-align: justify;
+  flex: 1;
+  padding: 35px 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.movie__title {
+display: flex;
+align-items: center;
+margin-bottom: 20px;
+}
+
+.heading__primary {
+  font-size: 20px;
+  margin-right: auto;
+  color: rgb(255, 255, 255);
+}
+
+.fa-fire {
+  color: rgb(255, 25, 0);
+}
+
+.movie__tag {
+  font-size: 10px;
+  color: #fff;
+  padding: 2px 7px;
+  border-radius: 100px;
+  margin-right: 8px;
+  display: block;
+  text-transform: uppercase;
+
+}
+
+.movie__tag--1 {
+background-color: #002a72;
+}
+
+.movie__tag--2 {
+  background-color:rgb(255, 25, 0);
+}
+
+.movie__description {
+  color: #fff;
+  font-size: 16px;
+}
+
+.movie__details {
+  display: flex;
+  margin: auto;
+}
+
+.movie__detail {
+  font-size: 13px;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.icons i {
+  margin-right: 3px;
+  font-size: 18px;
+}
+
+.icons-red {
+  color: salmon;
+}
+.icons-grey {
+  color: grey;
+}
+
+.icons-yellow {
+  color: rgb(190, 190, 71);
+
 }
